--- a/01_materials/labs/01_setup.ipynb
+++ b/01_materials/labs/01_setup.ipynb
@@ -302,9 +302,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The dotenv extension is already loaded. To reload it, use:\n",
+      "  %reload_ext dotenv\n"
+     ]
+    }
+   ],
    "source": [
     "%load_ext dotenv\n",
     "%dotenv "
@@ -312,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,9 +331,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-02-02 21:32:41,916, 530896887.py, 3, INFO, Hello world!\n"
+     ]
+    }
+   ],
    "source": [
     "from logger import get_logger\n",
     "_logs = get_logger(__name__)\n",
@@ -425,7 +442,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env",
+   "display_name": "dsi_participant",
    "language": "python",
    "name": "python3"
   },
@@ -439,7 +456,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
